--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -41,14 +41,14 @@ usb-device          = "0.3.1"
 usbd-serial         = "0.2.0"
 
 [features]
-esp32   = ["esp-hal/esp32",   "esp-hal/rt-xtensa", "esp-backtrace/esp32",   "esp-println/esp32",   "esp-hal-smartled/esp32"]
-esp32c2 = ["esp-hal/esp32c2", "esp-hal/rt-riscv",  "esp-backtrace/esp32c2", "esp-println/esp32c2"]
-esp32c3 = ["esp-hal/esp32c3", "esp-hal/rt-riscv",  "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-hal-smartled/esp32c3"]
-esp32c6 = ["esp-hal/esp32c6", "esp-hal/rt-riscv",  "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-hal-smartled/esp32c6"]
-esp32h2 = ["esp-hal/esp32h2", "esp-hal/rt-riscv",  "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-hal-smartled/esp32h2"]
-esp32p4 = ["esp-hal/esp32p4", "esp-hal/rt-riscv",  "esp-backtrace/esp32p4", "esp-println/esp32p4"]
-esp32s2 = ["esp-hal/esp32s2", "esp-hal/rt-xtensa", "esp-backtrace/esp32s2", "esp-println/esp32s2", "esp-hal-smartled/esp32s2"]
-esp32s3 = ["esp-hal/esp32s3", "esp-hal/rt-xtensa", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp-hal-smartled/esp32s3"]
+esp32   = ["esp-hal/esp32",   "esp-backtrace/esp32",   "esp-println/esp32",   "esp-hal-smartled/esp32"]
+esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-println/esp32c2"]
+esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-hal-smartled/esp32c3"]
+esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-hal-smartled/esp32c6"]
+esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-hal-smartled/esp32h2"]
+esp32p4 = ["esp-hal/esp32p4", "esp-backtrace/esp32p4", "esp-println/esp32p4"]
+esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2", "esp-hal-smartled/esp32s2"]
+esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp-hal-smartled/esp32s3"]
 
 async = ["esp-hal/async"]
 
