--- a/examples/.cargo/config.toml
+++ b/examples/.cargo/config.toml
@@ -9,14 +9,14 @@ esp32s2 = "run --features=esp32s2 --target=xtensa-esp32s2-none-elf"
 esp32s3 = "run --features=esp32s3 --target=xtensa-esp32s3-none-elf"
 
 [target.'cfg(target_arch = "riscv32")']
-runner    = "espflash flash --baud=921600 --monitor"
+runner    = "espflash flash --monitor"
 rustflags = [
   "-C", "link-arg=-Tlinkall.x",
   "-C", "force-frame-pointers",
 ]
 
 [target.'cfg(target_arch = "xtensa")']
-runner    = "espflash flash --baud=921600 --monitor"
+runner    = "espflash flash --monitor"
 rustflags = [
   # GNU LD
   "-C", "link-arg=-Wl,-Tlinkall.x",
