--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -46,6 +46,7 @@ embassy-executor     = { version = "0.5.0", optional = true }
 embassy-futures      = { version = "0.1.1", optional = true }
 embassy-sync         = { version = "0.5.0", optional = true }
 embassy-time-driver  = { version = "0.1.0", optional = true }
+heapless             = { version = "0.8.0", optional = true }
 
 # RISC-V
 riscv        = { version = "0.11.0", optional = true }
@@ -136,6 +137,7 @@ async = [
     "embassy-futures",
     "embedded-io",
     "embedded-io-async",
+    "heapless"
 ]
 
 # Embassy support
