--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -66,7 +66,7 @@ basic-toml = "0.1.8"
 serde      = { version = "1.0.195", features = ["derive"] }
 
 [features]
-default = ["embassy-integrated-timers", "rt", "vectored"]
+default = ["rt", "vectored"]
 
 riscv  = ["dep:riscv",     "critical-section/restore-state-u8",  "esp-riscv-rt?/zero-bss"]
 xtensa = ["dep:xtensa-lx", "critical-section/restore-state-u32"]
