Remove repo-level VS Code settings, ignore settings files moving forward

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ Cargo.lock
 # Wokwi related files
 diagram.json
 wokwi.toml
+
+# We'll ignore VS Code settings (at least for now...)
+**/.vscode/settings.json
