--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -46,14 +46,14 @@ xtensa-lx            = { version = "0.9.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
-esp32c2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
-esp32c3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
-esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
-esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
-esp32p4 = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
-esp32s2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
-esp32s3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "bbf7d5a", features = ["critical-section"], optional = true }
+esp32   = { version = "0.29.0", features = ["critical-section"], optional = true }
+esp32c2 = { version = "0.18.0", features = ["critical-section"], optional = true }
+esp32c3 = { version = "0.21.0", features = ["critical-section"], optional = true }
+esp32c6 = { version = "0.12.0", features = ["critical-section"], optional = true }
+esp32h2 = { version = "0.8.0",  features = ["critical-section"], optional = true }
+esp32p4 = { version = "0.1.0",  features = ["critical-section"], optional = true }
+esp32s2 = { version = "0.20.0", features = ["critical-section"], optional = true }
+esp32s3 = { version = "0.24.0", features = ["critical-section"], optional = true }
 
 [target.'cfg(target_arch = "riscv32")'.dependencies]
 esp-riscv-rt = { version = "0.6.1", optional = true }
