Add new embassy features for esp32s2 and other systimers. Enable embassy tick rate features by default

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -59,7 +59,7 @@ embassy = ["esp-hal/embassy"]
 embassy-executor-thread    = ["esp-hal/embassy-executor-thread"]
 embassy-executor-interrupt = ["esp-hal/embassy-executor-interrupt"]
 
-embassy-time-timg0 = ["esp-hal/embassy-time-timg0", "embassy-time-driver/tick-hz-1_000_000"]
+embassy-time-timg0 = ["esp-hal/embassy-time-timg0"]
 embassy-generic-timers = ["embassy-time/generic-queue-8"]
 
 direct-vectoring     = ["esp-hal/direct-vectoring"]
