--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -64,6 +64,7 @@ xtensa-lx-rt = { version = "0.16.0", optional = true }
 [build-dependencies]
 basic-toml = "0.1.8"
 serde      = { version = "1.0.195", features = ["derive"] }
+cfg-if = "1"
 
 [features]
 default = ["rt", "vectored"]
@@ -180,11 +181,16 @@ embassy-executor-thread = ["embassy", "embassy-executor"]
 ## by the time driver.
 embassy-integrated-timers = ["embassy-executor?/integrated-timers"]
 ## Enable the embassy time driver using the `SYSTIMER` peripheral. The
-## `SYSTIMER` peripheral has three alarams available for use.
-embassy-time-systick = []
+## `SYSTIMER` peripheral has three alarams available for use. Do **not** 
+## use when targeting an `esp32s2`.
+embassy-time-systick-16mhz = ["embassy-time-driver/tick-hz-16_000_000"]
+## Enable the embassy time driver using the `SYSTIMER` peripheral. The
+## `SYSTIMER` peripheral has three alarams available for use. Must only 
+## be used when targeting an `esp32s2`.
+embassy-time-systick-80mhz = ["embassy-time-driver/tick-hz-80_000_000"]
 ## Enable the embassy time driver using the `TIMG0` peripheral. The `TIMG0`
 ## peripheral has two alarms available for use.
-embassy-time-timg0 = []
+embassy-time-timg0 = ["embassy-time-driver/tick-hz-1_000_000"]
 
 #! ### PSRAM Feature Flags
 ## Use externally connected PSRAM (2MB).
