--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -15,16 +15,16 @@ harness = false
 defmt         = "0.3.5"
 defmt-rtt     = "0.4.0"
 embedded-test = "0.3.0"
-panic-probe   = "0.4.0"
-semihosting   = "0.1.4"
+panic-probe   = "0.3.1"
+semihosting   = "0.1.6"
 
 # HAL package:
-esp-hal    = { path = "../esp-hal",     features = ["defmt", "eh1"], optional = true}
+esp-hal = { path = "../esp-hal", features = ["defmt", "eh1"], optional = true }
 
 # Traits:
-embedded-hal       = { version = "0.2.7",      features = ["unproven"] }
-embedded-hal-async = { version = "1.0.0-rc.2", optional = true }
-embedded-hal-1     = { version = "1.0.0-rc.2", package  = "embedded-hal" }
+embedded-hal       = { version = "0.2.7", features = ["unproven"] }
+embedded-hal-async = { version = "1.0.0", optional = true }
+embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
 
 [features]
 # Device support (required!):
@@ -37,69 +37,56 @@ esp32s2 = ["esp-hal/esp32s2"]
 esp32s3 = ["esp-hal/esp32s3"]
 
 # Async & Embassy:
-async = [
-    "dep:embedded-hal-async",
-    "esp-hal?/async",
-]
+async = ["dep:embedded-hal-async", "esp-hal?/async"]
 
-embassy = [
-    "esp-hal?/embassy",
-]
+embassy = ["esp-hal?/embassy"]
 
-embassy-executor-interrupt = [
-    "esp-hal?/embassy-executor-interrupt",
-]
-embassy-executor-thread = [
-    "esp-hal?/embassy-executor-thread",
-]
+embassy-executor-interrupt = ["esp-hal?/embassy-executor-interrupt"]
+embassy-executor-thread    = ["esp-hal?/embassy-executor-thread"]
 
-embassy-time-systick = [
-    "esp-hal?/embassy-time-systick",
-
-]
-embassy-time-timg0 = [
-    "esp-hal?/embassy-time-timg0",
-]
+embassy-time-systick = ["esp-hal?/embassy-time-systick"]
+embassy-time-timg0   = ["esp-hal?/embassy-time-timg0"]
 
 # cargo build/run
 [profile.dev]
-codegen-units = 1
-debug = 2
-debug-assertions = true # <-
-incremental = false
-opt-level = 'z'         # <-
-overflow-checks = true  # <-
+codegen-units    = 1
+debug            = 2
+debug-assertions = true  # <-
+incremental      = false
+opt-level        = 'z'   # <-
+overflow-checks  = true  # <-
 
 # cargo test
 [profile.test]
-codegen-units = 1
-debug = 2
-debug-assertions = true # <-
-incremental = false
-opt-level = 3           # <-
-overflow-checks = true  # <-
+codegen-units    = 1
+debug            = 2
+debug-assertions = true  # <-
+incremental      = false
+opt-level        = 3     # <-
+overflow-checks  = true  # <-
 
 # cargo build/run --release
 [profile.release]
-codegen-units = 1
-debug = 2
+codegen-units    = 1
+debug            = 2
 debug-assertions = false # <-
-incremental = false
-lto = 'fat'
-opt-level = 3            # <-
-overflow-checks = false  # <-
+incremental      = false
+lto              = 'fat'
+opt-level        = 3     # <-
+overflow-checks  = false # <-
 
 # cargo test --release
 [profile.bench]
-codegen-units = 1
-debug = 2
+codegen-units    = 1
+debug            = 2
 debug-assertions = false # <-
-incremental = false
-lto = 'fat'
-opt-level = 3            # <-
-overflow-checks = false  # <-
+incremental      = false
+lto              = 'fat'
+opt-level        = 3     # <-
+overflow-checks  = false # <-
 
 # TODO: remove when able
 [patch.crates-io]
-defmt       = { git = "https://github.com/jessebraham/defmt", branch = "features/defmt_test_riscv" }
-panic-probe = { git = "https://github.com/jessebraham/defmt", branch = "features/defmt_test_riscv" }
+# FIXME: defmt patch can be removed since embedded-test already takes care of that?
+defmt       = { git = "https://github.com/t-moe/defmt", branch = "features/defmt_test_riscv" }
+panic-probe = { git = "https://github.com/t-moe/defmt", branch = "features/defmt_test_riscv" }
