Create the `esp-metadata` package, update `esp-hal` build script to use it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ exclude  = [
     "esp-hal-procmacros",
     "esp-hal-smartled",
     "esp-lp-hal",
+    "esp-metadata",
     "esp-riscv-rt",
     "examples",
 ]
