--- a/esp-metadata/devices/esp32.toml
+++ b/esp-metadata/devices/esp32.toml
@@ -1,48 +1,45 @@
 [device]
-arch = "xtensa"
+name  = "esp32"
+arch  = "xtensa"
 cores = "multi_core"
 
 peripherals = [
     # Peripherals available in the PAC:
     "aes",
     "apb_ctrl",
-    "apb_saradc",
-    "assist_debug",
-    "dma",
-    "ds",
+    "bb",
+    "dport",
     "efuse",
-    "extmem",
+    "flash_encryption",
+    "frc_timer",
     "gpio",
     "gpio_sd",
-    "hmac",
+    "hinf",
     "i2c0",
     "i2c1",
     "i2s0",
     "i2s1",
-    "interrupt_core0",
-    "interrupt_core1",
     "io_mux",
-    "lcd_cam",
     "ledc",
     "mcpwm0",
     "mcpwm1",
+    "nrx",
     "pcnt",
-    "peri_backup",
     "rmt",
     "rng",
     "rsa",
     "rtc_cntl",
     "rtc_i2c",
     "rtc_io",
+    "sdhost",
     "sens",
-    "sensitive",
     "sha",
+    "slc",
+    "slchost",
     "spi0",
     "spi1",
     "spi2",
     "spi3",
-    "system",
-    "systimer",
     "timg0",
     "timg1",
     "twai0",
@@ -51,23 +48,17 @@ peripherals = [
     "uart2",
     "uhci0",
     "uhci1",
-    "usb0",
-    "usb_device",
-    "usb_wrap",
-    "wcl",
-    "xts_aes",
 ]
 
 symbols = [
     # Additional peripherals defined by us (the developers):
     "adc",
-    "assist_debug_region_monitor",
-    "gdma",
+    "dac",
+    "pdma",
     "phy",
     "bt",
     "wifi",
     "psram",
-    "ulp_riscv_core",
 
     # ROM capabilities
     "rom_crc_le",
@@ -78,9 +69,5 @@ symbols = [
     "pm_support_ext0_wakeup",
     "pm_support_ext1_wakeup",
     "pm_support_touch_sensor_wakeup",
-    "pm_support_wifi_wakeup",
-    "pm_support_bt_wakeup",
-    "uart_support_wakeup_int",
     "ulp_supported",
-    "riscv_coproc_supported",
 ]
