--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -1,19 +1,20 @@
 [package]
-name         = "esp-hal"
-version      = "0.15.0"
-edition      = "2021"
-rust-version = "1.76.0"
-description  = "Bare-metal HAL for Espressif devices"
-repository   = "https://github.com/esp-rs/esp-hal"
-license      = "MIT OR Apache-2.0"
-links        = "esp-hal"
+name          = "esp-hal"
+version       = "0.16.0"
+edition       = "2021"
+rust-version  = "1.76.0"
+description   = "Bare-metal HAL for Espressif devices"
+documentation = "https://docs.esp-rs.org/esp-hal/"
+repository    = "https://github.com/esp-rs/esp-hal"
+license       = "MIT OR Apache-2.0"
+links         = "esp-hal"
 
 [dependencies]
 bitflags             = "2.4.2"
 bitfield             = "0.14.0"
 cfg-if               = "1.0.0"
 critical-section     = "1.1.2"
-defmt                = { version = "=0.3.5", optional = true }
+defmt                = { version = "0.3.6", optional = true }
 document-features    = "0.2.8"
 embassy-executor     = { version = "0.5.0", optional = true }
 embassy-futures      = { version = "0.1.1", optional = true }
@@ -30,15 +31,15 @@ embedded-io-async    = { version = "0.6.1", optional = true }
 enumset              = "1.1.3"
 esp-synopsys-usb-otg = { version = "0.4.0", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.7"
-log                  = { version = "0.4.20", optional = true }
+log                  = { version = "0.4.21", optional = true }
 nb                   = "1.1.0"
 paste                = "1.0.14"
 portable-atomic      = { version = "1.6.0", default-features = false }
-procmacros           = { version = "0.8.0", features = ["enum-dispatch", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
-riscv                = { version = "0.11.0", optional = true }
-strum                = { version = "0.25.0", default-features = false, features = ["derive"] }
+procmacros           = { version = "0.9.0", features = ["enum-dispatch", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
+riscv                = { version = "0.11.1", optional = true }
+strum                = { version = "0.26.1", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
-usb-device           = { version = "0.3.1", optional = true }
+usb-device           = { version = "0.3.2", optional = true }
 rand_core            = "0.6.4"
 ufmt-write           = { version = "0.1.0", optional = true }
 xtensa-lx            = { version = "0.9.0", optional = true }
@@ -56,15 +57,15 @@ esp32s2 = { version = "0.20.0", features = ["critical-section"], optional = true
 esp32s3 = { version = "0.24.0", features = ["critical-section"], optional = true }
 
 [target.'cfg(target_arch = "riscv32")'.dependencies]
-esp-riscv-rt = { version = "0.6.1", optional = true }
+esp-riscv-rt = { version = "0.7.0", optional = true, path = "../esp-riscv-rt" }
 
 [target.'cfg(target_arch = "xtensa")'.dependencies]
 xtensa-lx-rt = { version = "0.16.0", optional = true }
 
 [build-dependencies]
 basic-toml = "0.1.8"
-serde      = { version = "1.0.195", features = ["derive"] }
-cfg-if = "1"
+cfg-if     = "1.0.0"
+serde      = { version = "1.0.197", features = ["derive"] }
 
 [features]
 default = ["rt", "vectored"]
