Fix the `CHANGELOG.md` check in CI

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -19,6 +19,6 @@ jobs:
 
       - uses: dangoslen/changelog-enforcer@v3
         with:
-          changeLogPath: CHANGELOG.md
+          changeLogPath: esp-hal/CHANGELOG.md
           skipLabels: "skip-changelog"
           missingUpdateErrorMessage: "Please add a changelog entry in the CHANGELOG.md file."
