Ignore locally generated docs

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ wokwi.toml
 
 # We'll ignore VS Code settings (at least for now...)
 **/.vscode/settings.json
+
+# Ignore generated documentation
+docs/
