--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name         = "esp32-hal"
-version      = "0.18.0"
+version      = "0.18.1"
 edition      = "2021"
 rust-version = "1.67.0"
 description  = "HAL for ESP32 microcontrollers"
@@ -45,6 +45,9 @@ sha2               = { version = "0.10.8", default-features = false}
 smart-leds         = "0.4.0"
 ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
+
+[build-dependencies]
+build-alert = "0.1.6"
 
 [features]
 default     = ["rt", "vectored", "xtal-40mhz", "embassy-integrated-timers"]
