--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name         = "esp32s2-hal"
-version      = "0.15.0"
+version      = "0.15.1"
 edition      = "2021"
 rust-version = "1.67.0"
 description  = "HAL for ESP32-S2 microcontrollers"
@@ -48,6 +48,9 @@ ssd1306            = "0.8.4"
 static_cell        = { version = "2.0.0", features = ["nightly"] }
 usb-device         = "0.3.1"
 usbd-serial        = "0.2.0"
+
+[build-dependencies]
+build-alert = "0.1.6"
 
 [features]
 default     = ["rt", "vectored", "embassy-integrated-timers"]
