--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 anyhow     = "1.0.79"
+chrono     = "0.4.35"
 clap       = { version = "4.5.0",  features = ["derive"] }
 csv        = "1.3.0"
 env_logger = "0.11.1"
