--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -6,9 +6,12 @@ publish = false
 
 [dependencies]
 anyhow     = "1.0.79"
+chrono     = "0.4.35"
 clap       = { version = "4.5.0",  features = ["derive"] }
+csv        = "1.3.0"
 env_logger = "0.11.1"
 log        = "0.4.20"
 semver     = "1.0.21"
+serde      = { version = "1.0.197", features = ["derive"] }
 strum      = { version = "0.26.1", features = ["derive"] }
 toml_edit  = "0.22.5"
