--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -13,6 +13,10 @@ name    = "gpio"
 harness = false
 
 [[test]]
+name    = "uart"
+harness = false
+
+[[test]]
 name    = "spi_full_duplex"
 harness = false
 
@@ -25,7 +29,6 @@ semihosting   = "0.1.6"
 
 # HAL package:
 esp-hal = { path = "../esp-hal", features = ["defmt", "eh1"], optional = true }
-esp-backtrace = { version = "0.11.0", features = ["exception-handler", "panic-handler", "defmt"], optional = true}
 
 # Traits:
 embedded-hal       = { version = "0.2.7", features = ["unproven"] }
@@ -33,13 +36,13 @@ embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-1     = { version = "1.0.0", package = "embedded-hal" }
 
 [features]
-esp32   = ["esp-hal/esp32", "esp-backtrace/esp32"]
-esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2"]
-esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3"]
-esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6"]
-esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2"]
-esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2"]
-esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3"]
+esp32   = ["esp-hal/esp32"]
+esp32c2 = ["esp-hal/esp32c2"]
+esp32c3 = ["esp-hal/esp32c3"]
+esp32c6 = ["esp-hal/esp32c6"]
+esp32h2 = ["esp-hal/esp32h2"]
+esp32s2 = ["esp-hal/esp32s2"]
+esp32s3 = ["esp-hal/esp32s3"]
 
 # Async & Embassy:
 async = ["dep:embedded-hal-async", "esp-hal?/async"]
