--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -73,17 +73,28 @@ jobs:
           cd hil-test/
           cargo test --release --features=${{ env.PROBE_RS_CHIP }}
 
-  # test-esp32h2:
-  #   name: HIL Test | ESP32-H2
-  #   runs-on:
-  #     labels: [self-hosted, esp32h2]
+  test-esp32h2:
+    name: HIL Test | ESP32-H2
+    runs-on:
+      labels: [self-hosted, esp32h2-usb]
+    env:
+      PROBE_RS_CHIP: esp32h2
+      CARGO_BUILD_TARGET: riscv32imac-unknown-none-elf
 
-  #   steps:
-  #     - name: Run tests on-device
-  #       env:
-  #         PROBE_RS_CHIP: esp32h2
-  #       run: |
-  #         # ...
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: 'feat/hil-testing'
+
+      - uses: dtolnay/rust-toolchain@v1
+        with:
+          target: ${{ env.CARGO_BUILD_TARGET }}
+          toolchain: nightly
+
+      - name: Run tests
+        run: |
+          cd hil-test/
+          cargo test --release --features=${{ env.PROBE_RS_CHIP }}
 
   # Test Xtensa targets:
   # TODO: Add jobs for Xtensa once supported by `probe-rs`
